# python-development-environment

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
frontend/: app.js  index.html  styles.css
src/: main.py
src/python_development_environment/: __init__.py  module.py
src/routes/: __init__.py  home_routes.py
